--- a/requirements.txt
+++ b/requirements.txt
@@ -46,3 +46,7 @@ google-genai
 # macOSでは以下を brew でシステムにインストール
 #   brew install tesseract
 #   brew install tesseract-lang tesseract-lang-jpn
+
+# JWT トークン検証に必要（jwt_utilsで利用）
+PyJWT>=2.9.0
+extra-streamlit-components
